# Recommendation-Engine

./: .env.example  .gitignore  Dockerfile  Dockerfile.frontend  PHASE1_SPEC.md  PHASE2_SPEC.md  PROJECT.md  README.md  alembic.ini  cursorrules  docker-compose.yml  pyproject.toml  pytest.ini  requirements-frontend.txt  requirements.txt
.cursor/rules/: personalmatch.mdc
config/: __init__.py  domain_similarity.yaml  frontend_options.yaml  logging.py  role_compatibility.yaml  scraper_config.yaml  settings.py
frontend/: app.py  ui_settings.py
resources/: README.md
scripts/: _bootstrap.py  build_candidate_profile.py  demo_hard_filters.py  demo_hybrid_retrieval.py  demo_recommendations.py  demo_rerank.py  download_esco.py  e2e_smoke.py  embed_jobs.py  index_jobs_elasticsearch.py  load_esco_neo4j.py  load_kaggle_jobs.py  precompute_esco_embeddings.py  prepare_esco_from_tabiya.py  scrape_jobs.py  seed_db.py
src/: __init__.py
tests/: conftest.py  integration_fixtures.py  test_api.py  test_candidate_embedder.py  test_degradation.py  test_entity_linker.py  test_explainer.py  test_faiss_manager.py  test_github_fetcher.py  test_graph_retriever.py  test_hard_filters.py  test_hybrid_fuser.py  test_hybrid_pipeline.py  test_integration.py  test_job_embedder.py  test_llm_extractor.py  test_matching_engine.py  test_phase2_pipeline.py  test_profile_builder.py  test_redis_client.py  test_reranker.py  test_resume_parser.py  test_skill_expander.py  test_skill_filters.py  test_skill_match_display.py  test_skill_supplement.py  test_vector_retriever.py  test_weight_adjuster.py
(+95 files in other folders)
